fix(core): select adapt overflow

--- a/packages/core/src/components/select/select.scss
+++ b/packages/core/src/components/select/select.scss
@@ -68,10 +68,10 @@
       align-items: center;
       flex-wrap: wrap;
       height: 100%;
-      max-width: 70%;
-      flex-shrink: 0;
-
-      margin: auto;
+      flex-grow: 1;
+      // max-width: 70%;
+      // flex-shrink: 0;
+      // margin: auto;
 
       > ix-filter-chip {
         margin: 0.1rem;
